--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
-  background-color: #ff0000;
-  color: #0000FF;
+  background-color: #fff;
+  color: #000000;
+  font-size: 16px;
 }
 
 nav {
@@ -8,6 +9,22 @@ nav {
   float: left;
   position: fixed;
   width: 100%;
+}
+
+h1 {
+  font-size: 2em;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+h3 {
+  font-size: 1.3em;
+  padding-bottom: 10px;
+}
+
+p {
+  font-size: 100%;
+  line-height: 1.5;
 }
 
 .logo {
@@ -30,6 +47,22 @@ nav {
 
 .right {
   float: right;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  color:#0070BA;
+}
+
+a:hover {
+  color:#0070BC;
+}
+
+a:active {
+  color:#0070BD;
 }
 
 ul {
