--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #fff;
   color: #000000;
-  font-size: 16px;
+  font-size: 100%;
 }
 
 nav {
@@ -23,7 +23,7 @@ h3 {
 }
 
 p {
-  font-size: 100%;
+  font-size: 1em;
   line-height: 1.5;
 }
 
