changed nav background and link hover color

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 nav {
-  background-color: rgba(0,0,0,.5);
+  background-color: #404040;
   float: left;
   position: fixed;
   width: 100%;
@@ -63,7 +63,7 @@ a:visited {
 }
 
 a:hover {
-  color:#fff2dd;
+  color:#FF9EB0;
 }
 
 a:active {
